--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,13 +20,13 @@ outputs:
       host:
         - python >=3.6
         - pip
-        - jupyter-packaging <1
+        - jupyter-packaging
       run:
         - python >=3.6
         - bokeh >=1.0.0,!=2.0.0
         - distributed >=1.24.1
         - jupyter-server-proxy >=1.3.2
-        - jupyterlab >=3.0.0,<4
+        - jupyterlab >=3.0.0
     test:
       imports:
         - dask_labextension
